Top navbar will no longer be hidden
The top navbar will no longer be hidden when there are no actions and the toggle button is not visible.

issue: 94356

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -13,15 +13,6 @@
   }
 }
 
-/*  If the top navbar has no actions and does not have toggle button, we 
-    hide it, because the bottom nav bar will be displayed with the links
-*/
-:host(.navbar-nav-only:not([position="bottom"])) {
-  @media screen and (max-width: $gx-xsmall-breakpoint) {
-    display: none;
-  }
-}
-
 :host {
   @include visibility(block);
   @include elevation();
